# best_devops

./: README.md  main.py  pyproject.toml  requirements.txt  test_main.py  test_modulo.py
.github/workflows/: runtest.yaml
src/: main.py
test/: test_main.py  test_sub.py
tests/: test_main.py  test_sub.py
