[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ime-tvog-projekta"
version = "0.1.0"
description = "Kratak opis tvog projekta"
authors = ["Tvoje Ime <tvoj.email@primer.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tvoje-korisnicko-ime/ime-projekta"
homepage = "https://example.com"
keywords = ["keyword1", "keyword2"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py38']
