[tool.poetry]
name = "breast-cancer-svm"
version = "0.1.0"
description = "A simple SVM classifier for the Breast Cancer Wisconsin (Diagnostic) dataset."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
